# ubrain

./: .gitignore  README.md  pyproject.toml
data/: challenges.yaml
docs/: README.md
src/ubrain/: __init__.py  run_stub.py  types.py
src/ubrain/data/: __init__.py  spec.py
src/ubrain/decision/: __init__.py  policy.py
src/ubrain/diffusion/: __init__.py  model.py  stub.py
src/ubrain/evaluator/: __init__.py  reward.py
src/ubrain/scheduler/: __init__.py  loop.py
tasks/: README.md
tasks/data/: README.md
tasks/diffusion/: README.md
tasks/extensions/: README.md
tasks/policy/: README.md
tasks/runner/: README.md
tasks/scheduler/: README.md
