[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ubrain"
version = "0.1.0"
description = "Cognitive diffusion brain PoC"
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1,<3.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "typing-extensions>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]
